# SimT

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  run-style-check-diff.sh
docs/: Doxyfile  Makefile
src/: CMakeLists.txt  EitOptions.cpp  ParEITConfig.hpp  brouillon.txt  main.cpp
src/assemble/: CMakeLists.txt  electrode.cpp  interface.cpp  regular.cpp  write.cpp
src/geometry/: CMakeLists.txt  Form.cpp  Form.hpp  Grid.cpp  Grid.hpp  Point.cpp  Point.hpp
src/io/: CMakeLists.txt
src/io/input/: parameters.cpp  parameters.hpp  stringTools.cpp  stringTools.hpp
src/io/output/: Writers.cpp  Writers.hpp
src/solver/: BiConjugateGradient.hpp  BiConjugateGradientSolver.hpp  CMakeLists.txt  Matrix.hpp  PastixSolver.cpp  PastixSolver.hpp  PastixSolverParams.cpp  PastixSolverParams.hpp  Solver.hpp  SolverFabric.cpp  SolverFabric.hpp  SolverParams.hpp  System.cpp  System.hpp  TempMatrix.hpp
src/tools/: CMakeLists.txt  EitArray.hpp  EitBiVector.hpp  EitElectrode.cpp  EitElectrode.hpp  EitMath.cpp  EitMath.hpp  EitVector.cpp  EitVector.hpp
tst/: CMakeLists.txt  tests.hpp  tests_assemble.cpp  tests_form.cpp  tests_point.cpp
